<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <artifactId>hqy4cloud-common-service</artifactId>
        <groupId>com.hqy.cloud</groupId>
        <version>${revision}</version>
        <relativePath>../pom.xml</relativePath>
    </parent>
    <modelVersion>4.0.0</modelVersion>

    <artifactId>hqy4cloud-common-notice-service</artifactId>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
    </properties>

    <description>通用的通知服务</description>

    <dependencies>
        <dependency>
            <groupId>com.hqy.cloud</groupId>
            <artifactId>hqy4cloud-base-foundation-service</artifactId>
            <version>${project.parent.version}</version>
            <exclusions>
                <exclusion>
                    <groupId>com.hqy.cloud</groupId>
                    <artifactId>hqy4cloud-base-collection-service-api</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>com.hqy.cloud</groupId>
                    <artifactId>hqy4cloud-base-id-service-api</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.redisson</groupId>
                    <artifactId>redisson-spring-boot-starter</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>com.hqy.cloud</groupId>
            <artifactId>hqy4cloud-base-communication-service-api</artifactId>
            <version>${project.parent.version}</version>
        </dependency>
    </dependencies>


</project>